examples/ex3/test_cases/failing/check17_if_is_called_with_int.java
class Main {
    public static void main(String[] a) { 
        System.out.println(3);
    }
}

class Simple {

    public int func() {
        int num;

        num = 5;

        if (num) num = 6;
        else num = 7;

        return 0;
    }
}